# Oxidised-Obbattu

./: .gitignore  Cargo.toml  README.md
ObbattuFrontend/: package-lock.json  package.json  rollup.config.js
ObbattuFrontend/public/: global.css  index.html  manifest.webmanifest  service-worker.js
ObbattuFrontend/src/: App.svelte  Countdown.svelte  GameBoard.svelte  Header.svelte  ModalManager.svelte  Popup.svelte  RefreshNotif.svelte  Row.svelte  main.js  rangeaaa.js  storage.js  stores.js
ObbattuFrontend/src/GameBoard/: GameBoard.svelte  Row.svelte
ObbattuFrontend/src/LetterContainer/: Letter.svelte  LetterContainer.svelte  letter.js
ObbattuFrontend/src/Popups/HelpPopup/: HelpModalManager.svelte  HelpPopup.svelte
ObbattuFrontend/src/Popups/SolModal/: SolPopup.svelte
ObbattuFrontend/src/Popups/StatPopup/: StatModalManager.svelte  StatPopup.svelte
ObbattuFrontend/src/SolModal/: SolModalManager.svelte  SolPopup.svelte
src/: board_generator.rs  lib.rs  main.rs  sync_board_generator.rs
word-list/: all_kannada_words.txt  short_valid_words.txt  shortened_list.txt  valid_words_list.txt
