[package]
name = "obbattu-oxidised"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
lazy_static = "1.4.0"
unicode-segmentation = "1.9.0"
rand = "0.8.5"
chrono = "0.4.19"
rocket = "0.5.0-rc.2"
tokio-cron-scheduler = "0.7.1"
# local-ip-address = "0.4.4"